--- a/issFinacial/Views/VechicleLoanCollections/Delete.cshtml
+++ b/issFinacial/Views/VechicleLoanCollections/Delete.cshtml
@@ -149,7 +149,7 @@
                             </dt>
 
                             <dd>
-                                @Html.DisplayFor(model => model.NumberOfInstallments)
+                                @Html.DisplayFor(model => model.NumberOfInstallmentsId)
                             </dd>
                             <dt>
                                 <label>Select Due Number</label>
@@ -184,7 +184,7 @@
                             </dt>
 
                             <dd>
-                                @Html.DisplayFor(model => model.TotalAmount)
+                                @Html.DisplayFor(model => model.TotaldueAmount)
                             </dd>
                             <dt>
                                 <label>Late Days</label>
