--- a/issFinacial/Views/VechicleLoanCollections/Details.cshtml
+++ b/issFinacial/Views/VechicleLoanCollections/Details.cshtml
@@ -158,7 +158,7 @@
                                 </dt>
 
                                 <dd>
-                                    @Html.DisplayFor(model => model.NumberOfInstallments)
+                                    @Html.DisplayFor(model => model.NumberOfInstallmentsId)
                                 </dd>
 
                                 <dt>
@@ -198,7 +198,7 @@
                                 </dt>
 
                                 <dd>
-                                    @Html.DisplayFor(model => model.TotalAmount)
+                                    @Html.DisplayFor(model => model.TotaldueAmount)
                                 </dd>
 
                                 <dt>
