--- a/issFinacial/Views/AccountLedgers/Create.cshtml
+++ b/issFinacial/Views/AccountLedgers/Create.cshtml
@@ -83,16 +83,16 @@
                     <div class="form-group">
 
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.ledger, new { htmlAttributes = new { @class = "form-control", @placeholder = "Account Ledger" } })
-                            @Html.ValidationMessageFor(model => model.Ac, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.AccountName, new { htmlAttributes = new { @class = "form-control", @placeholder = "AccountName" } })
+                            @Html.ValidationMessageFor(model => model.AccountName, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
 
                         <div class="col-md-10">
-
-                            @Html.DropDownList("accountgroupId", null, htmlAttributes: new { @class = "form-control", @placeholder = "Area Name" })
+                            @Html.EditorFor(model => model.accountgroupId, new { htmlAttributes = new { @class = "form-control", @placeholder = "accountgroupId" } })
+                            @Html.ValidationMessageFor(model => model.accountgroupId, "", new { @class = "text-danger" })
                         </div>
 
                     </div>
@@ -110,6 +110,13 @@
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.type, new { htmlAttributes = new { @class = "form-control", @placeholder = "Type" } })
                             @Html.ValidationMessageFor(model => model.type, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.GroupName, new { htmlAttributes = new { @class = "form-control", @placeholder = "GroupName" } })
+                            @Html.ValidationMessageFor(model => model.GroupName, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
