--- a/issFinacial/Views/AccountLedgers/Edit.cshtml
+++ b/issFinacial/Views/AccountLedgers/Edit.cshtml
@@ -84,18 +84,16 @@
                     <div class="form-group">
 
                         <div class="col-md-10">
-                            <label>Account Ledger</label>
-                            @Html.EditorFor(model => model.ledger, new { htmlAttributes = new { @class = "form-control", @placeholder = "Account Ledger" } })
-                            @Html.ValidationMessageFor(model => model.ledger, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.AccountName, new { htmlAttributes = new { @class = "form-control", @placeholder = "AccountName" } })
+                            @Html.ValidationMessageFor(model => model.AccountName, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
 
                         <div class="col-md-10">
-                            @Html.DropDownList("accountgroupId", null, htmlAttributes: new { @class = "form-control", @placeholder = "Account Group" } )
-                          
-                         
+                            @Html.EditorFor(model => model.accountgroupId, new { htmlAttributes = new { @class = "form-control", @placeholder = "accountgroupId" } })
+                            @Html.ValidationMessageFor(model => model.accountgroupId, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
@@ -116,7 +114,13 @@
                             @Html.ValidationMessageFor(model => model.type, "", new { @class = "text-danger" })
                         </div>
                     </div>
+                    <div class="form-group">
 
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.GroupName, new { htmlAttributes = new { @class = "form-control", @placeholder = "GroupName" } })
+                            @Html.ValidationMessageFor(model => model.GroupName, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
                     <div class="text-right">
                         <button type="submit" value="Edit" class="btn btn-success">Submit</button>
                         @Html.ActionLink("Cancel", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
